<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="Team 1"
            style="@style/ScoreText">

        </TextView>

        <ImageButton
            android:id="@+id/decreaseTeam1"
            android:layout_width="@dimen/bt_size"
            android:layout_height="@dimen/bt_size"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:onClick="decreaseScore"
            android:layout_centerVertical="true"
            style="@style/MinusButton">

        </ImageButton>

        <ImageButton
            android:id="@+id/increaseTeam1"
            android:layout_width="@dimen/bt_size"
            android:layout_height="@dimen/bt_size"
            android:layout_alignParentRight="true"
            android:onClick="increaseScore"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            style="@style/PlusButton">

        </ImageButton>

        <TextView
            android:id="@+id/score_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="0"
            style="@style/ScoreText">

        </TextView>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="Team 2"
            style="@style/ScoreText">

        </TextView>

        <ImageButton
            android:id="@+id/decreaseTeam2"
            android:layout_width="@dimen/bt_size"
            android:layout_height="@dimen/bt_size"
            android:layout_alignParentLeft="true"
            android:onClick="decreaseScore"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            style="@style/MinusButton">

        </ImageButton>

        <ImageButton
            android:id="@+id/increaseTeam2"
            android:layout_width="@dimen/bt_size"
            android:layout_height="@dimen/bt_size"
            android:layout_alignParentRight="true"
            android:onClick="increaseScore"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            style="@style/PlusButton">

        </ImageButton>

        <TextView
            android:id="@+id/score_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="0"
            style="@style/ScoreText">

        </TextView>

    </RelativeLayout>

</LinearLayout>